--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Gallery</string>
+    <string name="message_progress_dialog">Loading... Please wait...</string>
+    <string name="permission_notification">Vui lòng cấp quyền cho ứng dụng!</string>
 </resources>
